# apriltags

./: CMakeLists.txt  Makefile  README.md
AprilTags/: MathUtil.h  TagDetector.h
cmake/: FindEIGEN.cmake  FindEigen.cmake  OpenCVConfig.cmake
example/: apriltags_demo.cpp
src/: TagDetection.cc  TagDetector.cc
